--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -59,21 +59,29 @@ button:focus {
 }
 
 /* line 15, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp[data-opacity="opacityOn"] {
+  animation: opacityOn 0.5s;
+}
+
+/* line 20, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp[data-opacity="opacityOff"] {
+  animation: opacityOff 0.7s;
+}
+
+/* line 24, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
 .viewer-wrapp .preVieuBtn {
   display: none;
 }
 
-/* line 19, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+/* line 28, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
 .viewer-wrapp .viewer {
   max-width: 60%;
   position: relative;
 }
 
-/* line 23, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
-.viewer-wrapp .viewer .close-viewuer {
+/* line 32, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp .viewer .btnInViewuer {
   position: absolute;
-  top: 20px;
-  right: 20px;
   margin: 10px;
   border: none;
   background-color: #0404043d;
@@ -85,10 +93,54 @@ button:focus {
   opacity: 0.6;
 }
 
-/* line 38, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+/* line 44, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp .viewer .btnInViewuer:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+/* line 50, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp .viewer .close-viewuer {
+  top: 20px;
+  right: 20px;
+}
+
+/* line 55, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp .viewer .previous-item {
+  top: 50%;
+  left: 0;
+  font-size: 200%;
+}
+
+/* line 61, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
+.viewer-wrapp .viewer .next-item {
+  right: 0;
+  top: 50%;
+  font-size: 200%;
+}
+
+/* line 67, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
 .viewer-wrapp .viewer img {
   width: 100%;
   height: auto;
+}
+
+@keyframes opacityOn {
+  0% {
+    opacity: 0.1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes opacityOff {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 /* line 4, ../../../MyProgects/mygallery/styles/scss/styles.scss */
