--- a/styles/scss/components/viewer.scss
+++ b/styles/scss/components/viewer.scss
@@ -12,6 +12,15 @@
     justify-content: center;
     overflow: auto;
 
+    &[data-opacity="opacityOn"] {
+
+        animation: opacityOn 0.5s;
+    }
+
+    &[data-opacity="opacityOff"] {
+        animation: opacityOff 0.7s;
+    }
+
     .preVieuBtn {
         display: none;
     }
@@ -20,10 +29,8 @@
         max-width: 60%;
         position: relative;
 
-        .close-viewuer {
+        .btnInViewuer {
             position: absolute;
-            top: 20px;
-            right: 20px;
             margin: 10px;
             border: none;
             background-color: #0404043d;
@@ -33,6 +40,28 @@
             font-weight: 300;
             transition: all 0.3s;
             opacity: 0.6;
+
+            &:hover {
+                opacity: 1;
+                transform: scale(1.3)
+            }
+        }
+
+        .close-viewuer {
+            top: 20px;
+            right: 20px;
+        }
+
+        .previous-item {
+            top: 50%;
+            left: 0;
+            font-size: 200%;
+        }
+
+        .next-item {
+            right: 0;
+            top: 50%;
+            font-size: 200%;
         }
 
         img {
@@ -40,5 +69,26 @@
             height: auto;
         }
 
+    }
+}
+
+@keyframes opacityOn {
+    0% {
+        opacity: 0.1;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes opacityOff {
+    0% {
+        opacity: 1;
+    }
+
+
+    100% {
+        opacity: 0;
     }
 }
