--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -145,21 +145,91 @@ button:focus {
 
 /* line 4, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
+  background: url("/img/wall2.jpg") center fixed;
 }
 
-/* line 9, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 11, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav {
+  position: fixed;
+  right: 50px;
+  z-index: 20;
+}
+
+/* line 16, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul {
+  list-style: none;
+}
+
+/* line 19, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li {
+  border-radius: 2px;
+  display: inline-block;
+  list-style: none;
+  margin: 10px;
+  border: none;
+  background-color: #000000a8;
+  padding: 5px 10px;
+  color: #b95700;
+  font-size: 28px;
+  font-weight: 300;
+  transition: all 0.3s;
+  opacity: 0.8;
+}
+
+/* line 33, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+/* line 38, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* line 47, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles {
+  text-transform: uppercase;
+  padding: 20px;
+  text-align: center;
+  color: chocolate;
+  border-bottom: 2px solid chocolate;
+  margin-bottom: 20px;
+}
+
+/* line 55, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article {
+  background-color: #000000a8;
+  width: 50%;
+  margin: auto;
+  border-radius: 2px;
+}
+
+/* line 61, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article h1 {
+  margin-top: 0;
+}
+
+/* line 65, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article hr {
+  border-color: chocolate;
+}
+
+/* line 74, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-nav-wrapp {
   margin: 15px 0px;
   padding: 5px;
 }
 
-/* line 13, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 78, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-nav-wrapp .gallery-naw {
   text-align: center;
 }
 
-/* line 16, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 81, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-nav-wrapp .gallery-naw button {
   border: none;
   padding: 5px;
@@ -170,24 +240,24 @@ body {
   font-weight: bold;
 }
 
-/* line 28, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 93, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box {
   position: relative;
 }
 
-/* line 32, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 97, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box.one-row {
   width: 100%;
   overflow: hidden;
 }
 
-/* line 36, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 101, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box.one-row .track-box {
   width: 800%;
   overflow: hidden;
 }
 
-/* line 45, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 110, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box.view-table .track-box {
   flex-wrap: wrap;
   display: -webkit-flex;
@@ -196,7 +266,7 @@ body {
   justify-content: flex-start;
 }
 
-/* line 56, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 121, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .item-Wrapp {
   position: relative;
   display: -webkit-inline-flex;
@@ -204,7 +274,7 @@ body {
   justify-content: center;
 }
 
-/* line 62, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 127, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .item-Wrapp div,
 .gallery-wrapp .gallery-box .item-Wrapp ul,
 .gallery-wrapp .gallery-box .item-Wrapp li,
@@ -212,7 +282,7 @@ body {
   width: 100%;
 }
 
-/* line 70, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 135, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box {
   -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
@@ -220,24 +290,24 @@ body {
   overflow: hidden;
 }
 
-/* line 81, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 146, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box img {
   height: 100%;
 }
 
-/* line 86, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 151, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box:hover {
   z-index: 6 !important;
   opacity: 1 !important;
   transform: rotate(0deg);
 }
 
-/* line 92, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 157, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale {
   transition: all 0.5s;
 }
 
-/* line 96, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 161, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale:hover {
   -o-transform: scale(1.7);
   -ms-transform: scale(1.7);
@@ -247,7 +317,7 @@ body {
   opacity: 1;
 }
 
-/* line 110, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 175, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-right:hover {
   -o-transform: translateX(30%) scale(1.7);
   -ms-transform: translateX(30%) scale(1.7);
@@ -256,7 +326,7 @@ body {
   transform: translateX(30%) scale(1.7);
 }
 
-/* line 120, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 185, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-left:hover {
   -o-transform: translateX(-30%) scale(1.7);
   -ms-transform: translateX(-30%) scale(1.7);
@@ -265,24 +335,24 @@ body {
   transform: translateX(-30%) scale(1.7);
 }
 
-/* line 137, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 202, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 141, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 206, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 147, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 212, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 figure {
   margin: 0;
 }
 
-/* line 152, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 217, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -296,7 +366,7 @@ figure {
   overflow: hidden;
 }
 
-/* line 168, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 233, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .fog {
   position: relative;
   height: 100vh;
@@ -304,7 +374,7 @@ figure {
   background-color: #000;
 }
 
-/* line 176, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 241, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .fog__container {
   position: absolute;
   height: 100%;
@@ -312,14 +382,14 @@ figure {
   overflow: hidden;
 }
 
-/* line 185, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 250, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .fog__img {
   position: absolute;
   height: 100vh;
   width: 300vw;
 }
 
-/* line 191, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 256, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .fog__img--first {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-1.png") repeat-x;
   background-size: contain;
@@ -327,7 +397,7 @@ figure {
   animation: marquee 60s linear infinite;
 }
 
-/* line 198, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 263, ../../../MyProgects/mygallery/styles/scss/styles.scss */
 .fog__img--second {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-2.png") repeat-x;
   background-size: contain;
