--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -2,7 +2,72 @@
 @import "components/viewer.scss";
 
 body {
-    margin: 0
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
+    background: url("/img/wall2.jpg") center fixed;
+
+}
+
+.main-nav {
+    position: fixed;
+    right: 50px;
+    z-index: 20;
+
+    ul {
+        list-style: none;
+
+        li {
+            border-radius: 2px;
+            display: inline-block;
+            list-style: none;
+            margin: 10px;
+            border: none;
+            background-color: #000000a8;
+            padding: 5px 10px;
+            color: #b95700;
+            font-size: 28px;
+            font-weight: 300;
+            transition: all 0.3s;
+            opacity: 0.8;
+
+            &:hover {
+                opacity: 1;
+                transform: scale(1.3);
+            }
+
+            a {
+                text-decoration: none;
+                color: inherit;
+
+            }
+        }
+    }
+}
+
+.titles {
+    text-transform: uppercase;
+    padding: 20px;
+    text-align: center;
+    color: chocolate;
+    border-bottom: 2px solid chocolate;
+    margin-bottom: 20px;
+
+    article {
+        background-color: #000000a8;
+        width: 50%;
+        margin: auto;
+        border-radius: 2px;
+
+        h1 {
+            margin-top: 0;
+        }
+
+        hr {
+            border-color: chocolate;
+        }
+    }
+
+
 }
 
 .gallery-wrapp {
