--- a/styles/scss/components/itemNav.scss
+++ b/styles/scss/components/itemNav.scss
@@ -19,7 +19,7 @@ button:focus {
             background-color: #0404043d;
             padding: 5px;
             color: #b95700;
-            font-size: 20px;
+            font-size: 1.5em;
             font-weight: 300;
             transition: all 0.3s;
             opacity: 0.6;
