--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -75,7 +75,7 @@ button:focus {
 
 /* line 28, ../../../MyProgects/mygallery/styles/scss/components/viewer.scss */
 .viewer-wrapp .viewer {
-  max-width: 60%;
+  width: 60%;
   position: relative;
 }
 
@@ -143,216 +143,24 @@ button:focus {
   }
 }
 
-/* line 4, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-body {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  margin: 0;
-  background: url("/img/wall2.jpg") center fixed;
-}
-
-/* line 11, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.main-nav {
-  position: fixed;
-  right: 50px;
-  z-index: 20;
-}
-
-/* line 16, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.main-nav ul {
-  list-style: none;
-}
-
-/* line 19, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.main-nav ul li {
-  border-radius: 2px;
-  display: inline-block;
-  list-style: none;
-  margin: 10px;
-  border: none;
-  background-color: #000000a8;
-  padding: 5px 10px;
-  color: #b95700;
-  font-size: 28px;
-  font-weight: 300;
-  transition: all 0.3s;
-  opacity: 0.8;
-}
-
-/* line 33, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.main-nav ul li:hover {
-  opacity: 1;
-  transform: scale(1.3);
-}
-
-/* line 38, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.main-nav ul li a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* line 47, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.titles {
-  text-transform: uppercase;
-  padding: 20px;
-  text-align: center;
-  color: chocolate;
-  border-bottom: 2px solid chocolate;
-  margin-bottom: 20px;
-}
-
-/* line 55, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.titles article {
-  background-color: #000000a8;
-  width: 50%;
-  margin: auto;
-  border-radius: 2px;
-}
-
-/* line 61, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.titles article h1 {
-  margin-top: 0;
-}
-
-/* line 65, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.titles article hr {
-  border-color: chocolate;
-}
-
-/* line 74, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-nav-wrapp {
-  margin: 15px 0px;
-  padding: 5px;
-}
-
-/* line 78, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-nav-wrapp .gallery-naw {
-  text-align: center;
-}
-
-/* line 81, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-nav-wrapp .gallery-naw button {
-  border: none;
-  padding: 5px;
-  width: 100px;
-  text-transform: uppercase;
-  background-color: darkslategrey;
-  color: antiquewhite;
-  font-weight: bold;
-}
-
-/* line 93, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box {
-  position: relative;
-}
-
-/* line 97, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box.one-row {
-  width: 100%;
-  overflow: hidden;
-}
-
-/* line 101, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box.one-row .track-box {
-  width: 800%;
-  overflow: hidden;
-}
-
-/* line 110, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box.view-table .track-box {
-  flex-wrap: wrap;
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-/* line 121, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .item-Wrapp {
-  position: relative;
-  display: -webkit-inline-flex;
-  display: inline-flex;
-  justify-content: center;
-}
-
-/* line 127, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .item-Wrapp div,
-.gallery-wrapp .gallery-box .item-Wrapp ul,
-.gallery-wrapp .gallery-box .item-Wrapp li,
-.gallery-wrapp .gallery-box .item-Wrapp p {
-  width: 100%;
-}
-
-/* line 135, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box {
-  -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
-}
-
-/* line 146, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box img {
-  height: 100%;
-}
-
-/* line 151, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box:hover {
-  z-index: 6 !important;
-  opacity: 1 !important;
-  transform: rotate(0deg);
-}
-
-/* line 157, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box.animation-scale {
-  transition: all 0.5s;
-}
-
-/* line 161, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box.animation-scale:hover {
-  -o-transform: scale(1.7);
-  -ms-transform: scale(1.7);
-  -moz-transform: scale(1.7);
-  -webkit-transform: scale(1.7);
-  transform: scale(1.7);
-  opacity: 1;
-}
-
-/* line 175, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-right:hover {
-  -o-transform: translateX(30%) scale(1.7);
-  -ms-transform: translateX(30%) scale(1.7);
-  -moz-transform: translateX(30%) scale(1.7);
-  -webkit-transform: translateX(30%) scale(1.7);
-  transform: translateX(30%) scale(1.7);
-}
-
-/* line 185, ../../../MyProgects/mygallery/styles/scss/styles.scss */
-.gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-left:hover {
-  -o-transform: translateX(-30%) scale(1.7);
-  -ms-transform: translateX(-30%) scale(1.7);
-  -moz-transform: translateX(-30%) scale(1.7);
-  -webkit-transform: translateX(-30%) scale(1.7);
-  transform: translateX(-30%) scale(1.7);
-}
-
-/* line 202, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 2, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 html {
   box-sizing: border-box;
 }
 
-/* line 206, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 6, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 212, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 12, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 figure {
   margin: 0;
 }
 
-/* line 217, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 17, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .absolute-bg {
   position: absolute;
   top: 0;
@@ -366,15 +174,16 @@ figure {
   overflow: hidden;
 }
 
-/* line 233, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 33, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .fog {
-  position: relative;
+  position: fixed;
   height: 100vh;
   width: 100%;
-  background-color: #000;
+  top: 0;
+  z-index: -1;
 }
 
-/* line 241, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 40, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .fog__container {
   position: absolute;
   height: 100%;
@@ -382,14 +191,14 @@ figure {
   overflow: hidden;
 }
 
-/* line 250, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 49, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .fog__img {
   position: absolute;
   height: 100vh;
   width: 300vw;
 }
 
-/* line 256, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 55, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .fog__img--first {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-1.png") repeat-x;
   background-size: contain;
@@ -397,7 +206,7 @@ figure {
   animation: marquee 60s linear infinite;
 }
 
-/* line 263, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+/* line 62, ../../../MyProgects/mygallery/styles/scss/components/fog.scss */
 .fog__img--second {
   background: url("https://res.cloudinary.com/dkr52htco/image/upload/v1536173269/fog-2.png") repeat-x;
   background-size: contain;
@@ -421,6 +230,198 @@ figure {
   100% {
     transform: scale(2);
   }
+}
+
+/* line 5, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
+  background: url("/img/wall2.jpg") center fixed;
+}
+
+/* line 12, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav {
+  position: fixed;
+  right: 50px;
+  z-index: 20;
+}
+
+/* line 17, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul {
+  list-style: none;
+}
+
+/* line 20, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li {
+  border-radius: 2px;
+  display: inline-block;
+  list-style: none;
+  margin: 10px;
+  border: none;
+  background-color: #000000a8;
+  padding: 5px 10px;
+  color: #b95700;
+  font-size: 28px;
+  font-weight: 300;
+  transition: all 0.3s;
+  opacity: 0.8;
+}
+
+/* line 34, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+/* line 39, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.main-nav ul li a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* line 48, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles {
+  text-transform: uppercase;
+  padding: 20px;
+  text-align: center;
+  color: chocolate;
+  border-bottom: 2px solid chocolate;
+  margin-bottom: 20px;
+}
+
+/* line 56, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article {
+  background-color: #000000a8;
+  width: 50%;
+  margin: auto;
+  border-radius: 2px;
+}
+
+/* line 62, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article h1 {
+  margin-top: 0;
+}
+
+/* line 66, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.titles article hr {
+  border-color: chocolate;
+}
+
+/* line 75, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-nav-wrapp {
+  margin: 15px 0px;
+  padding: 5px;
+}
+
+/* line 79, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-nav-wrapp .gallery-naw {
+  text-align: center;
+}
+
+/* line 82, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-nav-wrapp .gallery-naw button {
+  border: none;
+  padding: 5px;
+  width: 100px;
+  text-transform: uppercase;
+  background-color: darkslategrey;
+  color: antiquewhite;
+  font-weight: bold;
+}
+
+/* line 94, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box {
+  position: relative;
+}
+
+/* line 98, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.one-row {
+  width: 100%;
+  overflow: hidden;
+}
+
+/* line 102, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.one-row .track-box {
+  width: 800%;
+  overflow: hidden;
+}
+
+/* line 111, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box.view-table .track-box {
+  flex-wrap: wrap;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+/* line 122, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .item-Wrapp {
+  position: relative;
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  justify-content: center;
+}
+
+/* line 128, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .item-Wrapp div,
+.gallery-wrapp .gallery-box .item-Wrapp ul,
+.gallery-wrapp .gallery-box .item-Wrapp li,
+.gallery-wrapp .gallery-box .item-Wrapp p {
+  width: 100%;
+}
+
+/* line 136, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box {
+  -webkit-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 17px 39px 9px rgba(0, 0, 0, 0.75);
+  overflow: hidden;
+}
+
+/* line 147, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box img {
+  height: 100%;
+}
+
+/* line 152, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box:hover {
+  z-index: 6 !important;
+  opacity: 1 !important;
+  transform: rotate(0deg);
+}
+
+/* line 158, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box.animation-scale {
+  transition: all 0.5s;
+}
+
+/* line 162, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box.animation-scale:hover {
+  -o-transform: scale(1.7);
+  -ms-transform: scale(1.7);
+  -moz-transform: scale(1.7);
+  -webkit-transform: scale(1.7);
+  transform: scale(1.7);
+  opacity: 1;
+}
+
+/* line 176, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-right:hover {
+  -o-transform: translateX(30%) scale(1.7);
+  -ms-transform: translateX(30%) scale(1.7);
+  -moz-transform: translateX(30%) scale(1.7);
+  -webkit-transform: translateX(30%) scale(1.7);
+  transform: translateX(30%) scale(1.7);
+}
+
+/* line 186, ../../../MyProgects/mygallery/styles/scss/styles.scss */
+.gallery-wrapp .gallery-box .img-box.animation-scale.transl-to-left:hover {
+  -o-transform: translateX(-30%) scale(1.7);
+  -ms-transform: translateX(-30%) scale(1.7);
+  -moz-transform: translateX(-30%) scale(1.7);
+  -webkit-transform: translateX(-30%) scale(1.7);
+  transform: translateX(-30%) scale(1.7);
 }
 
 /*# sourceMappingURL=styles.css.map */
