--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -133,7 +133,7 @@ body {
             }
         }
 
-        .img-box {
+        .item-Wrapp {
             //border: 5px solid white;
             // height: 15vw;
             // width: 20vw;
@@ -146,6 +146,7 @@ body {
 
             img {
                 height: 100%;
+                min-width: 100%;
                 // max-width: 6vw;
             }
 
